--- a/ray-bbox-intersections/CMakeLists.txt
+++ b/ray-bbox-intersections/CMakeLists.txt
@@ -5,7 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
 add_executable(main
-        main.cpp
-        vector3.h
-        ray.h
-        bbox.h)
+        main.cpp)
